# cloud-registration-engine

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
package/: registration-engine.spec
src/registration_engine/: __init__.py  azure.py  connection.py  k8s.py  main.py  microsoft.py  provider.py  smt.py  storage.py  utils.py
tests/: conftest.py  test_azure.py  test_azure_chaos.py  test_config_integration.py  test_connection.py  test_k8s.py  test_k8s_chaos.py  test_main.py  test_microsoft.py  test_microsoft_chaos.py  test_provider.py  test_provider_chaos.py  test_smt.py  test_storage.py  test_utils.py
tests/data/config/: missing_sections.cfg  valid.cfg
