[tool.poetry]
name = "registration-engine"
version = "0.1.0"
description = "Rancher PAYG Registration Engine"
authors = ["SUSE <public-cloud-dev@susecloud.net>"]
readme = "README.md"
packages = [{include = "registration_engine", from = "src"}]
license = "GPLv3+"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
azure-identity = "^1.16.0"
requests = "^2.31.0"
kubernetes = "^29.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
registration-engine = "registration_engine.main:main"
